<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Create">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:onClick="imageEvent"
                    app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

                <TextView
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_street"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/street_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_cost"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/cost_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_details"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/details_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_phone"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/phone_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:layout_margin="20dp"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>